# rust-rocksdb

./: .travis.yml  Cargo.toml  azure-pipelines.yml
librocksdb-sys/: Cargo.toml  Makefile  bindings.rs  build.rs  build_version.cc  rocksdb_lib_sources.txt
librocksdb-sys/patches/: rocksdb.cc  rocksdb.h
librocksdb-sys/src/: bindings.rs  compact_on_deletion_collector.rs  lib.rs  patches.rs  patches_tests.rs
librocksdb-sys/tests/: ffi.rs
librocksdb-sys/tests/memory/: rocksdb_options_load_from_file.c
librocksdb-sys/utilities/: compact_on_deletion_collector.cc  compact_on_deletion_collector.h
src/: backup.rs  checkpoint.rs  column_family.rs  compaction_filter.rs  db.rs  db_iterator.rs  db_options.rs  db_pinnable_slice.rs  db_vector.rs  lib.rs  merge_operator.rs  open_raw.rs  optimistic_transaction.rs  optimistic_transaction_db.rs  options.rs  read_only_db.rs  secondary_db.rs  slice_transform.rs  snapshot.rs  transaction.rs  transaction_db.rs  util.rs  write_batch.rs
src/ops/: checkpoint.rs  columnfamily.rs  delete.rs  delete_file_in_range.rs  flush.rs  get.rs  get_pinned.rs  iter.rs  merge.rs  mod.rs  put.rs  setoptions.rs  transaction.rs  writebatch.rs
tests/: test_checkpoint.rs  test_column_family.rs  test_compationfilter.rs  test_db.rs  test_full_options.rs  test_iterator.rs  test_marker.rs  test_merge_operator.rs  test_multithreaded.rs  test_optimistic_transaction.rs  test_pinnable_slice.rs  test_property.rs  test_raw_iterator.rs  test_read_only_db.rs  test_rocksdb_options.rs  test_slice_transform.rs  test_transaction.rs  test_write_batch.rs
tests/fail/iterator/: db.rs  db.stderr  optimistic_transaction_db.rs  optimistic_transaction_db.stderr
tests/resources/: OPTIONS-000001
