[package]
name = "ckb-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database"
version = "0.15.1"
edition = "2018"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
license = "Apache-2.0"
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/nervosnetwork/rust-rocksdb"
exclude = [
    ".gitignore",
    "*.yml",
    "deploy.sh",
    "test/**/*",
    "*.md"
]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
valgrind = []
snappy = ["librocksdb-sys/snappy"]
lz4 = ["librocksdb-sys/lz4"]
zstd = ["librocksdb-sys/zstd"]
zlib = ["librocksdb-sys/zlib"]
bzip2 = ["librocksdb-sys/bzip2"]


[dependencies]
libc = "0.2"
librocksdb-sys = { package = "ckb-librocksdb-sys", path = "librocksdb-sys", version = "=6.11.6" }
tempfile = "3"

[dev-dependencies]
trybuild = "1.0"
